config/samples/monitoring_v1alpha1_gateway.yaml
apiVersion: monitoring.whizard.io/v1alpha1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: whizard
    app.kubernetes.io/managed-by: kustomize
    monitoring.whizard.io/service: kubesphere-monitoring-system.whizard
  name: gateway-sample
  namespace: kubesphere-monitoring-system
spec:
  # TODO(user): Add fields here
